@@ -294,3 +294,11 @@ public class MainViews extends Application {
             l.onScreenChanged(newScreen, userDataObject);
     }
 }
+
+
+
+//compilar tudo
+// javac -d out --module-path "C:\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml (Get-ChildItem -Recurse -Filter *.java -Path src).FullName
+
+//executar
+//java--module-path"C:\javafx-sdk-21.0.7\lib"--add-modules javafx.controls,javafx.fxml-cp"out;src"controller.viewcontroller.MainViews
